# goit-pythonweb-hw-10

./: README.md  main.py  pyproject.toml
migrations/versions/: 11cf8f01ce10_fixed_avatar_length.py  30cb673a21c3_fix_user_id_to_be_nullable.py  4559dd311f79_add_to_model_user_filed_confirmed.py  4f4e40c991a7_make_birthday_field_required.py  58637e84c653_add_user.py  77cf648bd700_add_to_model_user_filed_confirmed_fixed2.py  c58aabb91491_fix_user_back_populates.py  cc887847e669_add_refresh_token.py  e56af5c0733d_change_back_ref_to_back_populates.py  e7ace7d4fffe_add_confirmed_to_user_model.py  f8df0b939982_fixed_password_length.py  f982b6d2ff1f_change_birthday_to_date.py  fd725f98fc1b_init.py
src/: schemas.py
src/api/: auth.py  contacts.py  groups.py  users.py  utils.py
src/conf/: config.py  messages.py
src/database/: models.py
src/repository/: contacts.py  groups.py  users.py
src/services/: auth.py  email.py  groups.py  upload_file.py  users.py
